--- a/Porfolio.html
+++ b/Porfolio.html
@@ -271,7 +271,7 @@
         <a href="https://github.com/jhnrysbrpn/WebDev1b2_JohnReySobrepena/pull/7">
           <h1 class="text-l-gray md:text-[10px] lg:text-sm hover:text-g-color tracking-widest absolute translate-x-[7em] 
            translate-y-[2.2em] lg:translate-x-[18em] lg:translate-y-[10em] md:translate-x-[9em] md:translate-y-[4em]">CALCULATOR</h1>
-          <img src="../ScreenShots/calc.png" class="w-[5em] lg:w-[15em] md:w-[5em]">
+          <img src="Assets/ScreenShots/calc.png" class="w-[5em] lg:w-[15em] md:w-[5em]">
         </a>
     </div>
   </div>
