--- a/PS-CForm.html
+++ b/PS-CForm.html
@@ -81,16 +81,16 @@
         md:py-0 py-4 md:pl-0 pl-7 md:opacity-100 opacity-0 top-[-400px] transition-all ease-in 
         duration-500 md:items-center gap-[3vw]">
           <li>
-            <a href="" class="navi">Home</a>
+            <a href="PsychConnect.html" class="navi">Home</a>
           </li>
           <li>
-            <a href="" class="navi">Services</a>
+            <a href="#" class="navi">Services</a>
           </li>
           <li>
-            <a href="" class="navi">Members</a>
+            <a href="#" class="navi">Members</a>
           </li>
           <li>
-            <a href="" class="navi">Contact Us</a>
+            <a href="#" class="navi">Contact Us</a>
           </li>
         </ul>
 
@@ -215,7 +215,7 @@
 
         <ul class="flex mx-auto lg:w-1/2 justify-between md:justify-evenly lg:justify-evenly">
           <li>
-            <a href="#Home" class="fNavi">Home</a>
+            <a href="PsychConnect.html" class="fNavi">Home</a>
           </li>
           <li>
             <a href="" class="fNavi">About</a>
