--- a/newyear.html
+++ b/newyear.html
@@ -9,13 +9,6 @@
 
 <style type="text/tailwindcss">
 
-@font-face { 
-   font-family : 'courgette';
-   src: url(Assets/Styles/Courgette/Courgette-Regular.ttf);
-}
-
-@import url('https://fonts.googleapis.com/css2?family=Courgette&family=Lobster+Two:ital@1&display=swap');
-
   @layer utilities {
     .container {
       @apply m-2 w-[4.5rem] h-20 md:m-4 md:w-28 md:h-24 lg:m-8 lg:w-32 lg:h-32 font-extrabold tracking-widest backdrop-blur text-center rounded-lg shadow-lg shadow-[#0e9aeb]
@@ -47,7 +40,7 @@
 
  <div class="w-full h-full items-center justify-center flex flex-col">
 
-  <h1 class="text-xl pb-8 md:text-3xl lg:text-4xl lg:pb-16 ">New Year Countdown</h1>
+  <h1 class="text-xl pb-8 md:text-3xl lg:text-4xl lg:pb-16 uppercase tracking-widestNew Year Countdown</h1>
 
   <div id="countdown" class="countdown flex">
 
