--- a/christmas.html
+++ b/christmas.html
@@ -28,7 +28,7 @@ class="w-screen h-screen flex text-white font-[Garamond] box-border justify-cent
 
 <div class="w-full h-full items-center justify-center flex flex-col">
 
-  <h1 class="text-xl pb-8 md:text-3xl lg:text-4xl lg:pb-16 uppercase tracking-widest">Christmas Countdown</h1>
+  <h1 style="text-shadow: 3px 2px 5px #00a6ff;" class="text-xl pb-8 md:text-3xl lg:text-4xl lg:pb-16 uppercase tracking-widest">Christmas Countdown</h1>
 
   <div id="countdown" class="countdown flex">
 
