--- a/newyear.html
+++ b/newyear.html
@@ -23,16 +23,6 @@
 
 </style>
 
-<script>
-  tailwind.config = {
-    theme: {
-      fontfamily: {
-        'courgette' : ['Courgette', 'cursive'], 
-      }
-    }
-  }
-</script>
-
 </head>
 
 <body style="background-image: url(/Assets/Img/BG/wallhaven.jpg); background-size: cover; width: 100vw;" 
@@ -40,7 +30,8 @@
 
  <div class="w-full h-full items-center justify-center flex flex-col">
 
-  <h1 class="text-xl pb-8 md:text-3xl lg:text-4xl lg:pb-16 uppercase tracking-widestNew Year Countdown</h1>
+  <h1 style="text-shadow: 3px 2px 5px #00a6ff;" class="text-xl pb-8 md:text-3xl lg:text-4xl lg:pb-16 uppercase tracking-widest">New Year Countdown</h1>
+
   <div id="countdown" class="countdown flex">
 
     <div class="container">
