slight adjustment has been made

--- a/christmas.html
+++ b/christmas.html
@@ -33,22 +33,22 @@ class="w-screen h-screen flex text-white font-[Garamond] box-border justify-cent
   <div id="countdown" class="countdown flex">
 
     <div class="container">
-    <h1 id="days" class="time day">00</h1>
+    <h1 id="days" class="time">00</h1>
     <small class="text">Days</small>
     </div>
     
     <div class="container">
-      <h1 id="hours" class="time hour">00</h1>
+      <h1 id="hours" class="time">00</h1>
       <small class="text">Hours</small>
     </div>
 
     <div class="container">
-      <h1 id="minutes" class="time minute">00</h1>
+      <h1 id="minutes" class="time">00</h1>
       <small class="text">Minutes</small>
     </div>
 
     <div class="container">
-      <h1 id="seconds" class="time second">00</h1>
+      <h1 id="seconds" class="time">00</h1>
       <small class="text">Seconds</small>
     </div>
 
