--- a/newyear.html
+++ b/newyear.html
@@ -30,31 +30,27 @@
 
  <div class="w-full h-full items-center justify-center flex flex-col">
 
-<<<<<<< HEAD
   <h1 style="text-shadow: 3px 2px 5px #00a6ff;" class="text-xl pb-8 md:text-3xl lg:text-4xl lg:pb-16 uppercase tracking-widest">New Year Countdown</h1>
 
-=======
-  <h1 class="text-xl pb-8 md:text-3xl lg:text-4xl lg:pb-16 uppercase tracking-widestNew Year Countdown</h1>
->>>>>>> f6c93e1b4d492e3c53af4403160bd9ec76fac0ab
   <div id="countdown" class="countdown flex">
 
     <div class="container">
-    <h1 id="days" class="time day">00</h1>
+    <h1 id="days" class="time">00</h1>
     <small class="text">Days</small>
     </div>
     
     <div class="container">
-      <h1 id="hours" class="time hour">00</h1>
+      <h1 id="hours" class="time">00</h1>
       <small class="text">Hours</small>
     </div>
 
     <div class="container">
-      <h1 id="minutes" class="time minute">00</h1>
+      <h1 id="minutes" class="time">00</h1>
       <small class="text">Minutes</small>
     </div>
 
     <div class="container">
-      <h1 id="seconds" class="time second">00</h1>
+      <h1 id="seconds" class="time">00</h1>
       <small class="text">Seconds</small>
     </div>
 
