--- a/Team1.html
+++ b/Team1.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NBA's Sport teams</title>
-    <link rel="stylesheet" type="text/css" href="../Css/Team1.css" /> 
+    <link rel="stylesheet" type="text/css" href="Assets/Css/Team1.css" /> 
     <script src="https://kit.fontawesome.com/96e8d283a5.js" 
     crossorigin="anonymous"></script>
 
