--- a/christmas.html
+++ b/christmas.html
@@ -29,27 +29,32 @@ class="w-screen h-screen flex text-white font-[Garamond] box-border justify-cent
 <div class="w-full h-full items-center justify-center flex flex-col">
 
 
-  <h1  style="text-shadow: 3px 2px 5px #00a6ff;" class="h1Text text-[3vw] font-extrabold pb-8 lg:pb-16 z-10 uppercase tracking-widest">Christmas Countdown</h1>
+  <h1  style="text-shadow: 3px 2px 5px #00a6ff;" class=" text-[3vw] font-extrabold pb-8 lg:pb-16 z-10 uppercase tracking-widest">Christmas Countdown</h1>
+  
+    <div id="countdown" class="countdown flex">
 
-  <div id="countdown" class="countdown flex">
-
-    <div class="container">
-     <h1 id="days" class="time">00</h1>
-     <span class="text">Days</span>
+      <div class="container">
+      <h1 id="days" class="time">00</h1>
+      <small class="text">Days</small>
+      </div>
+      
+      <div class="container">
+        <h1 id="hours" class="time">00</h1>
+        <small class="text">Hours</small>
+      </div>
+  
+      <div class="container">
+        <h1 id="minutes" class="time">00</h1>
+        <small class="text">Minutes</small>
+      </div>
+  
+      <div class="container">
+        <h1 id="seconds" class="time">00</h1>
+        <small class="text">Seconds</small>
+      </div>
+  
     </div>
-    
-    <div class="container">
-      <h1 id="hours" class="time">00</h1>
-      <span class="text">Hours</span>
-
-    <div class="container">
-      <h1 id="minutes" class="time">00</h1>
-      <span class="text">Minutes</span>
-
-    <div class="container">
-      <h1 id="seconds" class="time">00</h1>
-      <span class="text">Seconds</span>
-    </div>
+  </div>
 
   </div>
 </div>
