--- a/itsjustme.html
+++ b/itsjustme.html
@@ -17,10 +17,15 @@
         <video src=""></video>
       </div>
 
+
 <button class="button">
   <span>Want to know more about me?</span>
 </button>
 
+    </div>
+
+    <div>
+      <img src="Assets/Img/itsJustMe/avatar.jpg" alt="">
     </div>
 
 </body>
