--- a/itsjustme.html
+++ b/itsjustme.html
@@ -25,7 +25,7 @@
     </div>
 
     <div>
-      <img src="Assets/Img/itsJustMe/avatar.jpg" alt="">
+      <img src="Assets/Img/itsJustMe/avatar.png" alt="">
     </div>
 
 </body>
