--- a/itsjustme.html
+++ b/itsjustme.html
@@ -10,8 +10,9 @@
 </head>
 <body>
   
-    <div>
-      <p class=""> IT`S JUST ME </p>
+  <p class=""> IT`S JUST ME </p>
+
+    <div class="flex ">
 
       <div>
         <video src=""></video>
@@ -25,7 +26,7 @@
     </div>
 
     <div>
-      <img src="Assets/Img/itsJustMe/avatar.png" alt="">
+      <img class="w={5vw }" src="Assets/Img/itsJustMe/avatar.png" alt="">
     </div>
 
 </body>
