--- a/appleSpace.html
+++ b/appleSpace.html
@@ -3,43 +3,95 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Apple Space</title>
+  <title>Apple Space — cleaned</title>
 
-  <link rel="stylesheet" href="Assets/Css/appleSpace.css">
-  <!-- Tailwind Play CDN -->
-  <script src="https://cdn.tailwindcss.com"></script>
+
+  <link rel="stylesheet" href="Assets/Css/appleSpace.css" />   <!-- Css -->
+  <script src="https://cdn.tailwindcss.com"></script> <!-- Tailwindcss CDN -->
+
+
 </head>
-<body class="w-[100vw] h-[100vh] flex justify-center antialiased overflow-hidden">
+<body class="antialiased bg-transparent text-slate-50 flex items-center justify-center overflow-hidden">
 
-  <!-- Background video (fills screen) -->
+  <!-- Background video -->
   <video
-    autoplay
-    muted
-    loop
-    playsinline
-    poster="./Assets/Img/designs/frame1.png"
-    class="fixed inset-0 w-screen h-screen object-cover -z-10 brightness-50"
-    src="./Assets/mp4/waveBg.mp4"
+    autoplay muted loop playsinline
+    poster="./Assets/appleSpace/waveBg-poster.jpg"
+    class="bg-video"
+    src="./Assets/appleSpace/waveBg.mp4"
     aria-hidden="true"
-  >
-    Your browser does not support the video tag.
-  </video>
+  >Your browser does not support the video tag.</video>
 
-  <!-- Foreground content centered both axes -->
-  <main class="relative z-10 flex flex-col items-center justify-center text-center m-5">
-    <h1 class="pt-20 text-white text-2xl font-extrabold leading-tight drop-shadow-lg">
-      Welcome to Apple Space
-    </h1>
+  <!-- Content Wrapper -->
+  <main class="w-full min-h-screen px-4 py-10 flex flex-col items-center text-center">
+    <header class="w-full max-w-6xl mx-auto mb-6">
+      <h1 class="text-3xl sm:text-4xl font-extrabold leading-tight text-white drop-shadow-lg">
+        Welcome to Apple Space
+      </h1>
+    </header>
 
-    <figure class="w-[85vw] h-[100vh]">
-      <img
-        src="./Assets/Img/designs/frame1.png"
-        alt="design frame"
-        class="w-full h-auto rounded-2xl shadow-2xl opacity-50"
-      />
-    </figure>
+  <!-- Frame -->
+    <div class="frame">
+     <!-- Decorative frame image -->
+      <img src="./Assets/appleSpace/frame1.png" alt="design frame" class="rounded-2xl shadow-2xl opacity-80" />
 
-    <h1>hello</h1>
+  <!--  Profile card  -->
+      <div
+        class="overlay"
+        style="width: 21.6%;
+               height: 42%; 
+               left: 6.4%; 
+               top: 13.5%; 
+               padding: 0.6rem;"
+        aria-hidden="false"
+      >
+  <!-- Profile picture  -->
+        <img src="./Assets/Img/avatar.png" alt="avatar" class="avatar" />
+      </div>
+
+  <!--  Name bar -->
+      <div
+        class="overlay"
+        style="width: 48%;
+               height: 8%;
+               right: 8%;
+               top: 12%;
+               padding: 0.4rem;"
+        aria-hidden="true"
+      >
+        <div class="h-full flex items-center justify-start">
+          <span class="text-lg font-semibold text-white">Name / Title</span>
+        </div>
+      </div>
+
+  <!--  Content card -->
+      <div
+        class="overlay"
+        style="width: 52%;
+               height: 40%;
+               right: 6%;
+               top: 26%;
+               padding: 1rem;"
+      >
+        <div class="w-full h-full overflow-auto text-left">
+          <p class="text-sm sm:text-base leading-relaxed text-white/90">Content area — replace with real content. This block will scale proportionally with the frame thanks to percentage sizes and aspect-ratio. Use padding and rem-based font sizes for predictable cross-browser text layout.</p>
+        </div>
+      </div>
+
+  <!--  team members panel -->
+      <div
+        class="overlay"
+        style="width: 18%;
+               height: 18%;
+               left: 6%;
+               bottom: 8%;
+               padding: 0.5rem;"
+        aria-hidden="true"
+      >
+        <div class="text-xs text-white/80">Team</div>
+      </div>
+
+    </div>
 
   </main>
 
